--- a/main.html
+++ b/main.html
@@ -12,52 +12,107 @@
 
 <!-- jQuery 2.2.4 -->
 <script>
-	var key = "ab90a10ff5b266ae2955c6d1a48a1aa7";
-	var lat, lon;
-	$(document).ready(function() {
-	  alert("This website will use your location to view the local weather.")
-	  $.ajax({
-	    url:"http://ip-api.com/json",
-	    success: function(inLocat){showWeather(inLocat)},
-	    error: alert("Nope")
-	  });
-	   
-	});
+	// Must be run using http
+var key = "ab90a10ff5b266ae2955c6d1a48a1aa7";
+var unitType = false;
+$(document).ready(function() {
+  $.ajax({
+    url: "http://ip-api.com/json",
+    success: function(inLocat) {
+      showWeather(inLocat)
+    },
+  });
+  $("#converterButton").on("click", function() {
+    if (unitType === false) {
+      unitType = true;
+      $.ajax({
+        url: "http://ip-api.com/json",
+        success: function(inLocat) {
+          showWeather(inLocat)
+        },
+      });
+    } else {
+      unitType = false;
+      $.ajax({
+        url: "http://ip-api.com/json",
+        success: function(inLocat) {
+          showWeather(inLocat)
+        },
+      });
+    }
+  });
 
-	// Use ajax to put new information in <div> sections
-	function showWeather(inLocat) {
-	  alert(inLocat["lat"] + " " + inLocat["lon"]);
-	  $.ajax({
-	    url: "http://api.openweathermap.org/data/2.5/weather?lat="+ inLocat["lat"] + "&lon="+ inLocat["lon"] + "&APPID=ab90a10ff5b266ae2955c6d1a48a1aa7",
-	    success: function(weatherData){
-	      console.log(JSON.stringify(weatherData));
-	      $("#weatherType").html(JSON.stringify(weatherData["weather"][0]["description"]));
-	    },
-	    error: function(objectRet){
-	      console.log(JSON.stringify(objectRet));
-	    }
-	    
-	  });
-	  
-	};
+});
 
-	// API error handling function. Shows unique error depending on error type
-	function apiError(error) {
-	  switch (error.code) {
-	    case error.PERMISSION_DENIED:
-	      alert("Permission denied.");
-	      break;
-	    case error.POSITION_UNAVAILABLE:
-	      alert("No position available.");
-	      break;
-	    case error.TIME_OUT:
-	      alert("Timed out when making request.");
-	      break;
-	    case error.UNKNOWN_ERROR:
-	      alert("Error of unknown type.");
-	      break;
-	  }
-	};
+// Use ajax to put new information in <div> sections
+function showWeather(inLocat) {
+  if (unitType === false) {
+    $.ajax({
+      url: "http://api.openweathermap.org/data/2.5/weather?lat=" + inLocat["lat"] + "&lon=" + inLocat["lon"] + "&units=imperial" + "&APPID=ab90a10ff5b266ae2955c6d1a48a1aa7",
+      success: function(weatherData) {
+        console.log(JSON.stringify(weatherData));
+        $("#weatherType").html(weatherData["weather"][0]["description"]);
+        $("#temperature").html(weatherData["main"]["temp"]);
+        $("#tempMax").html(weatherData["main"]["temp_max"]);
+        $("#tempMin").html(weatherData["main"]["temp_min"]);
+        $("#converterButton").html("To celsius.")
+        imgRequest(JSON.stringify(weatherData["weather"][0]["description"]));
+      },
+      error: function(objectRet) {
+        console.log(JSON.stringify(objectRet));
+      }
+
+    });
+  } else {
+    $.ajax({
+      url: "http://api.openweathermap.org/data/2.5/weather?lat=" + inLocat["lat"] + "&lon=" + inLocat["lon"] + "&units=metric" + "&APPID=ab90a10ff5b266ae2955c6d1a48a1aa7",
+      success: function(weatherData) {
+        console.log(JSON.stringify(weatherData));
+        $("#weatherType").html(weatherData["weather"][0]["description"]);
+        $("#temperature").html(weatherData["main"]["temp"]);
+        $("#tempMax").html(weatherData["main"]["temp_max"]);
+        $("#tempMin").html(weatherData["main"]["temp_min"]);
+        $("#converterButton").html("To fahrenheit.")
+        imgRequest(JSON.stringify(weatherData["weather"][0]["description"]));
+      },
+      error: function(objectRet) {
+        console.log(JSON.stringify(objectRet));
+      }
+
+    });
+  }
+
+};
+
+// API error handling function. Shows unique error depending on error type
+function apiError(error) {
+  switch (error.code) {
+    case error.PERMISSION_DENIED:
+      alert("Permission denied.");
+      break;
+    case error.POSITION_UNAVAILABLE:
+      alert("No position available.");
+      break;
+    case error.TIME_OUT:
+      alert("Timed out when making request.");
+      break;
+    case error.UNKNOWN_ERROR:
+      alert("Error of unknown type.");
+      break;
+  }
+};
+
+// Image request function
+// Takes a string to describe weather, and returns an image depicting the weather.
+function imgRequest(descript) {
+  var key = "3180814-7415e0bafd784873da864c7f2";
+  $.ajax({
+    url: "http://pixabay.com/api/?key=" + key + "&q=" + encodeURIComponent(descript) + "&image_type=photo&pretty=true",
+    success: function(inJSON) {
+      $("body").css("background-image", "url(" + inJSON["hits"][0]["webformatURL"]) + ")";
+    }
+  });
+};
 </script>
 
 <!-- Google font: Baloo Bhaina-->
@@ -76,5 +131,6 @@
 	      <button id = "converterButton" class="btn btn-primary"></button>
 	    </div>
 	  </div>
+	  <p>Images brought to you by Pixabay</p>
 	</body>
 </html>
